--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,116 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body style="text-align: center;">
+<!-- <div>
+    <app-reactive-forms></app-reactive-forms>
+</div> -->
 
-
-  <!-- interpolation using objects -->
-
-  <h1>OBJECT USING INTERPOLATION</h1>
-
-  <h2>{{sec1_data.titlename}} <br>
-      {{sec1_data.subtitle}} <br>
-      {{sec1_data.text}} <br>
-      {{sec1_data.date}} <br>
-      {{titlename}}</h2>
-
-<!-- style binding -->
-
-  <h1 [style.color]="text" [style.background-color]="bg" [style.font-size]="value">ANGULAR </h1>
-  <h2 [style.color]="unique"> STYLE BINDING</h2>
-
-  <h2 [style]="styles">STYLE BINDING USING property</h2>
-
-
-  <!-- ng style for adding multiple styles  -->
-
-  
-  <h2 [ngStyle]="set()">ngstyle</h2>
-
-
-
-  
-  <h2 [ngStyle]="{'text-align':'right',
-  'border':'1px solid red',
-  'color':'violet'}">NGSTYLE </h2>
-
-<!-- conditional style binding  -->
-  <h2 [style.color]="ph>10?'violet':'red'">conditional style binding</h2>
-
-
-
-
-
-
-
-<div [style]="student_data_style">
-  <div class="float-div"><app-bind1 [mark1]="45" [mark2]="43" [mark3]="50" [img]="img1"
-    name="ATHUL RAJ"></app-bind1></div>
-
-<div class="float-div"><app-bind1 [mark1]="30" [mark2]="48" [mark3]="36" [img]="imgs1"
-  name="AMAL RAJ"></app-bind1></div>
-
-<div class="float-div"><app-bind1 [mark1]="48" [mark2]="44" [mark3]="40" [img]="img3"
-  name="AKASH RAJ"></app-bind1></div>
-
-</div>
-
-
-
-<div>
-  <div>
-    <app-bind3 name="Arun varma" [age]="22" prof="Engineer"></app-bind3>
-  </div>
-  <div>
-    <app-bind3 name="Amrutha guptha" [age]="24" prof="Web designer"></app-bind3>
-  </div>
-  <div>
-    <app-bind3 name="keerthi" [age]="20" prof="Engineer"></app-bind3>
-  </div>
-  <div>
-    <app-bind3 name="Deepash" [age]="28" prof="Engineer"></app-bind3>
-  </div>
-  <div>
-    <app-bind3 name="Manoj sharma" [age]="23" prof="Clerk"></app-bind3>
-  </div>
-  <div>
-    <app-bind3 name="santhosh mishra" [age]="26" prof="Clerk"></app-bind3>
-  </div>
-</div>
-
-
-<!-- Event handling in angular -->
-
-<div>
-  <app-event1></app-event1>
-</div>
-
-
-<div style="width: 100%; height: 1500px;">
-  <div style="margin: 50px;">
-    <app-event2></app-event2>
-  </div>
-</div>
-
-<!-- template driven forms -->
-<div style="width: 100%; height: 600px;">
-<app-template-driven-form></app-template-driven-form>
-</div>
-
-
-<!-- reactive forms  -->
-<div style="width: 100%; height: 600px;">
-  <app-reactive-forms></app-reactive-forms>
-  </div>
-<!-- end of reactive forms  -->
-
-<div>
-  <app-ngif></app-ngif>
-</div>
-
-</body>
-</html>
+<app-event1></app-event1>
