--- a/src/app/event1/event1.component.css
+++ b/src/app/event1/event1.component.css
@@ -15,3 +15,19 @@
     color: white;
     margin:10px;
 }
+
+.box{
+    width: 150px;
+    height: 150px;
+    border: 2px solid black;
+}
+.btnstyle:hover{
+    box-shadow: 2px 6px 12px rgb(77, 77, 77);
+    transform:translateY(-10px) ;
+    /* transform: skew(10deg); */
+    /* transform: rotate(360deg); */
+    /* transform: scale(1.1); */
+    transition: all ease-in-out 0.5s;
+    color: blue;
+    background-color: white;
+}
